--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -6,6 +6,6 @@
   background-color: rgb(223, 219, 219);
   outline: none;
   border: none;
-  padding: 5px 0;
+  padding: 10px 4px;
   margin-top: 5px;
 }
