--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .App {
-  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+.font-text {
+  font-family: "Lora", serif !important;
+  font-weight: 600 !important;
+  font-size: 18px !important;
 }
 
 .App-logo {
