--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -9,3 +9,9 @@
   padding: 10px 4px;
   margin-top: 5px;
 }
+.user-spinner {
+  text-align: center;
+  text-transform: capitalize;
+  color: red;
+  font-weight: bolder;
+}
